# full-stack-ai-template

./: AGENTS.md  CLAUDE.md  full-stack-ai-template.code-workspace
backend/: .env.development  .env.example  .gitignore  AGENTS.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2025_12_24_1435-cafb01de3aef_add_user_table.py
backend/app/: main.py
backend/app/api/: deps.py  main.py  models.py
backend/app/api/decorators/: response_wrapper.py
backend/app/api/handlers/: __init__.py  general.py
backend/app/api/middlewares/: __init__.py  logging.py  request_id.py
backend/app/api/routes/auth/: deps.py  router.py
backend/app/api/routes/user/: deps.py  models.py  router.py  schemas.py  service.py
backend/app/api/schemas/: error.py  response.py
backend/app/core/: config.py  db.py  logger.py  models.py
backend/app/core/decorators/: __init__.py
backend/app/core/handlers/: __init__.py  api.py  general.py
backend/app/core/middlewares/: logging.py  request_id.py
backend/app/core/schemas/: __init__.py  api.py
backend/app/llm/: chat_client.py
backend/app/routes/: __init__.py
backend/app/routes/health/: router.py
backend/scripts/: commands.py  pre_start.py  setup_db.py
backend/tests/: conftest.py  test_auth_flow.py
frontend/: .env.development  AGENTS.md  next.config.ts  package.json  pnpm-lock.yaml
frontend/src/app/(agent)/: layout.tsx  page.tsx
frontend/src/app/(agent)/_components/: moon.tsx  proverbs.tsx  types.ts  weather.tsx
frontend/src/app/api/copilotkit/: route.ts
frontend/src/shared/config/: env.ts
frontend/src/shared/lib/tanstack-query/: provider.tsx
openspec/: project.md
